# SoftwareDatabase

./: .gitattributes  CMakeLists.txt  README.md  main.cpp
include/: App.h  Database.h  UIManager.h
src/: App.cpp  Database.cpp  UIManager.cpp
